--- a/src/main/resources/templates/articles/index.html
+++ b/src/main/resources/templates/articles/index.html
@@ -65,20 +65,20 @@
             <tr>
                 <td>첫 글</td>
                 <td>#java</td>
-                <td>Uno</td>
+                <td>jh</td>
                 <td>2022-01-01</td>
             </tr>
             <tr>
-                <td>두번째 글2</td>
+                <td>두번째 글</td>
                 <td>#spring</td>
-                <td>Uno</td>
-                <td>2022-01-02</td>
+                <td>jh</td>
+                <td><time>2022-01-02</time></td>
             </tr>
             <tr>
                 <td>세번째 글</td>
                 <td>#spa</td>
-                <td>Uno</td>
-                <td>2022-01-03</td>
+                <td>jjh</td>
+                <td><time>2022-01-03</time></td>
             </tr>
           </tbody>
       </table>
